# weather-rs

./: Cargo.toml  README.md  rustfmt.toml  shell.nix
src/: main.rs  structs.rs
