[package]
name = "weather-rs"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
term_size = "0.3.2"
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
tzf-rs = "1.0.0"
anyhow = "1.0.98"
